using Azure.AI.OpenAI;
using OpenAI.Chat;

namespace AzureFunction.Client
{
    public sealed class AzureOpenAIChatClient : IChatCompletionClient
    {
        private readonly AzureOpenAIClient _client;
        private readonly string _deploymentName;

        public AzureOpenAIChatClient(
            AzureOpenAIClient client,
            string deploymentName
            )
        {
            _client = client;
            _deploymentName = deploymentName;
        }

        public async Task<string> GetAnswerAsync(
            string systemPrompt,
            string userPrompt,
            CancellationToken cancellationToken = default)
        {
            var chatClient = _client.GetChatClient(_deploymentName);

            ChatMessage[] messages =
            {
                new SystemChatMessage(systemPrompt),
                new UserChatMessage(userPrompt)
            };

            var options = new ChatCompletionOptions
            {
                // says it's an unsuported parameter
                //Temperature = 0.0f,            // Lower = more deterministic
            };

            var completionResult =
                await chatClient.CompleteChatAsync(messages, options, cancellationToken);

            ChatCompletion completion = completionResult.Value;

            return completion.Content.Count > 0
                ? completion.Content[0].Text
                : string.Empty;
        }
    }
}
